# fastapi_postgres

./: .env  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
app/: .gitignore  main.py
app/config/: database.py
app/migration/: env.py
app/migration/versions/: 66b26c85f00a_create_products_table.py
app/repository/: products.py
app/routers/: product_router.py
app/schemas/: product.py  request.py
